deploy: d5c1ca6250231848effdf73296dd4127ddc7dc52

--- a/programming.html
+++ b/programming.html
@@ -175,6 +175,10 @@
 <ul>
 <li><a href="https://en.cppreference.com">Cpp reference</a></li>
 </ul>
+<h2 id="scala"><a class="header" href="#scala">Scala</a></h2>
+<ul>
+<li><a href="https://www.scala-lang.org/">Webpage</a></li>
+</ul>
 <h2 id="elixir"><a class="header" href="#elixir">Elixir</a></h2>
 <ul>
 <li><a href="https://elixir-lang.org/">Webpage</a></li>
