--- a/print.html
+++ b/print.html
@@ -283,35 +283,15 @@
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="programming-languages"><a class="header" href="#programming-languages">Programming languages</a></h1>
 <p>I am keeping a list of usefull links and tools one may be using.</p>
-<!--
-- [CPP]
-- [Rust]
-- [Python]
-- [Go]
--->
-<h2 id="rust"><a class="header" href="#rust">Rust</a></h2>
-<p>Here are some usefull links:</p>
-<ul>
-<li><a href="https://www.rust-lang.org">Rust page</a></li>
-<li><a href="https://play.rust-lang.org/">Rust playground</a></li>
-<li><a href="https://crates.io/">crates.io</a></li>
-<li><a href="https://lib.rs/">lib.rs</a></li>
-</ul>
-<h2 id="c"><a class="header" href="#c">C++</a></h2>
-<p>Here are some links:</p>
-<ul>
-<li><a href="https://en.cppreference.com">Cpp reference</a></li>
-</ul>
-<h2 id="scala"><a class="header" href="#scala">Scala</a></h2>
-<ul>
-<li><a href="https://www.scala-lang.org/">Webpage</a></li>
-</ul>
-<h2 id="elixir"><a class="header" href="#elixir">Elixir</a></h2>
-<ul>
-<li><a href="https://elixir-lang.org/">Webpage</a></li>
-<li><a href="https://hexdocs.pm/elixir">Docs</a></li>
-</ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="programming-exercises"><a class="header" href="#programming-exercises">Programming exercises</a></h1>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: center">Lang</th><th style="text-align: center">Links</th></tr></thead><tbody>
+<tr><td style="text-align: center">C++</td><td style="text-align: center"><a href="https://en.cppreference.com">Cpp reference</a></td></tr>
+<tr><td style="text-align: center">Rust</td><td style="text-align: center"><a href="https://www.rust-lang.org">Web</a> <a href="https://play.rust-lang.org/">Playground</a> <a href="https://crates.io/">crates.io</a> <a href="https://lib.rs/">lib.rs</a></td></tr>
+<tr><td style="text-align: center">Perl</td><td style="text-align: center"><a href="https://www.perl.org/">Web</a></td></tr>
+<tr><td style="text-align: center">Scala</td><td style="text-align: center"><a href="https://www.scala-lang.org/">Web</a></td></tr>
+<tr><td style="text-align: center">Python</td><td style="text-align: center"><a href="https://www.python.org/">Web</a></td></tr>
+<tr><td style="text-align: center">Elixir</td><td style="text-align: center"><a href="https://elixir-lang.org/">Web</a> <a href="https://hexdocs.pm/elixir">Docs</a></td></tr>
+</tbody></table>
+</div><div style="break-before: page; page-break-before: always;"></div><h1 id="programming-exercises"><a class="header" href="#programming-exercises">Programming exercises</a></h1>
 <p>There are some more or less easy programming exercises that will get you into a programming. Yet I have not work out the exact style of these pages, now there is just a list of solutions to typical problems.</p>
 <h2 id="ceaser-cipher"><a class="header" href="#ceaser-cipher">Ceaser cipher</a></h2>
 <pre><code class="language-py"># Assume only whitespace and lovercase alphabet is present.
