--- a/programming.html
+++ b/programming.html
@@ -156,35 +156,15 @@
                     <main>
                         <h1 id="programming-languages"><a class="header" href="#programming-languages">Programming languages</a></h1>
 <p>I am keeping a list of usefull links and tools one may be using.</p>
-<!--
-- [CPP]
-- [Rust]
-- [Python]
-- [Go]
--->
-<h2 id="rust"><a class="header" href="#rust">Rust</a></h2>
-<p>Here are some usefull links:</p>
-<ul>
-<li><a href="https://www.rust-lang.org">Rust page</a></li>
-<li><a href="https://play.rust-lang.org/">Rust playground</a></li>
-<li><a href="https://crates.io/">crates.io</a></li>
-<li><a href="https://lib.rs/">lib.rs</a></li>
-</ul>
-<h2 id="c"><a class="header" href="#c">C++</a></h2>
-<p>Here are some links:</p>
-<ul>
-<li><a href="https://en.cppreference.com">Cpp reference</a></li>
-</ul>
-<h2 id="scala"><a class="header" href="#scala">Scala</a></h2>
-<ul>
-<li><a href="https://www.scala-lang.org/">Webpage</a></li>
-</ul>
-<h2 id="elixir"><a class="header" href="#elixir">Elixir</a></h2>
-<ul>
-<li><a href="https://elixir-lang.org/">Webpage</a></li>
-<li><a href="https://hexdocs.pm/elixir">Docs</a></li>
-</ul>
-
+<div class="table-wrapper"><table><thead><tr><th style="text-align: center">Lang</th><th style="text-align: center">Links</th></tr></thead><tbody>
+<tr><td style="text-align: center">C++</td><td style="text-align: center"><a href="https://en.cppreference.com">Cpp reference</a></td></tr>
+<tr><td style="text-align: center">Rust</td><td style="text-align: center"><a href="https://www.rust-lang.org">Web</a> <a href="https://play.rust-lang.org/">Playground</a> <a href="https://crates.io/">crates.io</a> <a href="https://lib.rs/">lib.rs</a></td></tr>
+<tr><td style="text-align: center">Perl</td><td style="text-align: center"><a href="https://www.perl.org/">Web</a></td></tr>
+<tr><td style="text-align: center">Scala</td><td style="text-align: center"><a href="https://www.scala-lang.org/">Web</a></td></tr>
+<tr><td style="text-align: center">Python</td><td style="text-align: center"><a href="https://www.python.org/">Web</a></td></tr>
+<tr><td style="text-align: center">Elixir</td><td style="text-align: center"><a href="https://elixir-lang.org/">Web</a> <a href="https://hexdocs.pm/elixir">Docs</a></td></tr>
+</tbody></table>
+</div>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
