--- a/sandbox.html
+++ b/sandbox.html
@@ -154,17 +154,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="programming-languages"><a class="header" href="#programming-languages">Programming languages</a></h1>
-<p>I am keeping a list of usefull links and tools one may be using.</p>
-<div class="table-wrapper"><table><thead><tr><th style="text-align: center">Lang</th><th style="text-align: center">Links</th></tr></thead><tbody>
-<tr><td style="text-align: center">C++</td><td style="text-align: center"><a href="https://en.cppreference.com">Cpp reference</a></td></tr>
-<tr><td style="text-align: center">Rust</td><td style="text-align: center"><a href="https://www.rust-lang.org">Web</a> <a href="https://play.rust-lang.org/">Playground</a> <a href="https://crates.io/">crates.io</a> <a href="https://lib.rs/">lib.rs</a></td></tr>
-<tr><td style="text-align: center">Perl</td><td style="text-align: center"><a href="https://www.perl.org/">Web</a></td></tr>
-<tr><td style="text-align: center">Scala</td><td style="text-align: center"><a href="https://www.scala-lang.org/">Web</a></td></tr>
-<tr><td style="text-align: center">Python</td><td style="text-align: center"><a href="https://www.python.org/">Web</a></td></tr>
-<tr><td style="text-align: center">Elixir</td><td style="text-align: center"><a href="https://elixir-lang.org/">Web</a> <a href="https://hexdocs.pm/elixir">Docs</a></td></tr>
-</tbody></table>
-</div>
+                        <h1 id="my-programming-sandbox"><a class="header" href="#my-programming-sandbox">My programming sandbox</a></h1>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
