deploy: fe310e08f1f7aaebd9428416a4001d64b3bc9d36

--- a/adventofcode.html
+++ b/adventofcode.html
@@ -159,6 +159,7 @@
 Plus you may also play a small <a href="https://aoc-bingo.fly.dev/">Bingo</a> that someone made. Also you may consider joining <a href="https://www.reddit.com/r/adventofcode/">Reddit</a> where you may find useful tips, or help someone.</p>
 <h3 id="years"><a class="header" href="#years">Years</a></h3>
 <ul>
+<li><a href="./aoc/2024.html">Year 2024</a></li>
 <li><a href="./aoc/2023.html">Year 2023</a></li>
 <li><a href="./aoc/2022.html">Year 2022</a></li>
 <li><a href="./aoc/2021.html">Year 2021</a></li>
@@ -175,7 +176,7 @@ Plus you may also play a small <a href="https://aoc-bingo.fly.dev/">Bingo</a> th
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="aoc/2024.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -189,7 +190,7 @@ Plus you may also play a small <a href="https://aoc-bingo.fly.dev/">Bingo</a> th
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="aoc/2024.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
