--- a/aoc/2024-1.html
+++ b/aoc/2024-1.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2023 - Personal page</title>
+        <title>Year 2024 day 1 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,46 +154,99 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2023"><a class="header" href="#advent-of-code---year-2023">Advent of code - Year 2023</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2023">year 2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2023-1.html">Day 1</a></li>
-<li><a href="2023-2.html">Day 2</a></li>
-<li><a href="2023-3.html">Day 3</a></li>
-<li><a href="2023-4.html">Day 4</a></li>
-<li><a href="2023-5.html">Day 5</a></li>
-<li><a href="2023-6.html">Day 6</a></li>
-<li><a href="2023-7.html">Day 7</a></li>
-<li><a href="2023-8.html">Day 8</a></li>
-<li><a href="2023-9.html">Day 9</a></li>
-<li><a href="2023-10.html">Day 10</a></li>
-<li><a href="2023-11.html">Day 11</a></li>
-<li><a href="2023-12.html">Day 12</a></li>
-<li><a href="2023-13.html">Day 13</a></li>
-<li><a href="2023-14.html">Day 14</a></li>
-<li><a href="2023-15.html">Day 15</a></li>
-<li><a href="2023-16.html">Day 16</a></li>
-<li><a href="2023-17.html">Day 17</a></li>
-<li><a href="2023-18.html">Day 18</a></li>
-<li><a href="2023-19.html">Day 19</a></li>
-<li><a href="2023-20.html">Day 20</a></li>
-<li><a href="2023-21.html">Day 21</a></li>
-<li><a href="2023-22.html">Day 22</a></li>
-<li><a href="2023-23.html">Day 23</a></li>
-<li><a href="2023-24.html">Day 24</a></li>
-<li><a href="2023-25.html">Day 25</a></li>
-</ul>
+                        <h1 id="advent-of-code---year-2024-day-1"><a class="header" href="#advent-of-code---year-2024-day-1">Advent of code - Year 2024 Day 1</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/1">day 1</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+<h3 id="info"><a class="header" href="#info">Info</a></h3>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>In the first part we only compute the absolute difference in a sorted lists.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>In the second part we create a map for the second column, where keys are the numers and value is the number of occurances. Then proceed in the first column and compute the value.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "strconv"
+  "sort"
+  "math"
+)
+
+func read_file(file_path string) ([]int, []int) {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  regex, _ := regexp.Compile("([0-9]+)\\s+([0-9]+)")
+  found := (regex.FindAllStringSubmatch(string(content), -1))
+  var first_column []int
+  var second_column []int
+  for _, f := range(found) {
+    nr1, _ := strconv.Atoi(f[1])
+    nr2, _ := strconv.Atoi(f[2])
+    first_column = append(first_column, nr1)
+    second_column = append(second_column, nr2)
+  }
+  sort.Ints(first_column)
+  sort.Ints(second_column)
+  return first_column, second_column
+}
+
+func count(list *[]int) map[int]int {
+  my_map := make(map[int]int)
+  for _,val := range *list {
+    i, ok := my_map[val]
+    if ok {
+      my_map[val] = i + 1
+    } else {
+      my_map[val] = 1
+    }
+  }
+  return my_map
+}
+
+func part1() {
+  var result int = 0
+  read_file("INPUT")
+  first_column, second_column := read_file("INPUT")
+  for i,_ := range first_column {
+    difference := math.Abs(float64(first_column[i] - second_column[i]))
+    result += int(difference)
+  }
+  fmt.Println("Part 1: ", result)
+}
+
+func part2() {
+  var result int = 0
+  first_column, second_column := read_file("INPUT")
+  second_map := count(&amp;second_column)
+  for _, key := range first_column {
+    i, ok := second_map[key]
+    if ok {
+      result = result + key * i
+    }
+  }
+  fmt.Println("Part 2: ", result)
+}
+
+func main() {
+  fmt.Println("Year 2024 day 1 - Historian Hysteria")
+  part1()
+  part2()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-1.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -203,11 +256,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-1.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
