deploy: f21e9edbab89b805548e72be8e46afc7d9f8d4e8

--- a/aoc/2015-1.html
+++ b/aoc/2015-1.html
@@ -156,7 +156,7 @@
                     <main>
                         <h1 id="advent-of-code---year-2015-day-1"><a class="header" href="#advent-of-code---year-2015-day-1">Advent of code - Year 2015 Day 1</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2015/day/1">day 1</a>. Go back to year <a href="2015.html">2015</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="info"><a class="header" href="#info">Info</a></h3>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
 <p>Simply just go through the list and count the floors.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
