--- a/aoc/2016-1.html
+++ b/aoc/2016-1.html
@@ -156,7 +156,7 @@
                     <main>
                         <h1 id="advent-of-code---year-2016-day-1"><a class="header" href="#advent-of-code---year-2016-day-1">Advent of code - Year 2016 Day 1</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2016/day/1">day 1</a>. Go back to year <a href="2016.html">2016</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="info"><a class="header" href="#info">Info</a></h3>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
 <p>In the first part we jump from one place to another and then compute the manhattan distance. It is implemented to solve also the other part.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
