--- a/aoc/2017-2.html
+++ b/aoc/2017-2.html
@@ -156,7 +156,7 @@
                     <main>
                         <h1 id="advent-of-code---year-2017-day-2"><a class="header" href="#advent-of-code---year-2017-day-2">Advent of code - Year 2017 Day 2</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2017/day/2">day 2</a>. Go back to year <a href="2017.html">2017</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="info"><a class="header" href="#info">Info</a></h3>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
 <p>In the first part we use iterations. We compute the maximums and minimums. After that we zip those together and find the subtraction and sum it up.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
