--- a/aoc/2023-16.html
+++ b/aoc/2023-16.html
@@ -156,7 +156,7 @@
                     <main>
                         <h1 id="advent-of-code---year-2023-day-16"><a class="header" href="#advent-of-code---year-2023-day-16">Advent of code - Year 2023 Day 16</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2023/day/16">day 16</a>. Go back to year <a href="2023.html">2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="info"><a class="header" href="#info">Info</a></h3>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
 <p>We simply recursively simulate beam step-by-step. We use hashmap to memorize already visited places in grid with the same directions.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
