--- a/aoc/2023-18.html
+++ b/aoc/2023-18.html
@@ -156,7 +156,7 @@
                     <main>
                         <h1 id="advent-of-code---year-2023-day-18"><a class="header" href="#advent-of-code---year-2023-day-18">Advent of code - Year 2023 Day 18</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2023/day/18">day 18</a>. Go back to year <a href="2023.html">2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="info"><a class="header" href="#info">Info</a></h3>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
 <p>We can simply calculate the whole grid. Then create the outline and after that recursively fill in the polygon from a starting node. This solution is actually in here anymore.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
