--- a/aoc/2023-19.html
+++ b/aoc/2023-19.html
@@ -156,7 +156,7 @@
                     <main>
                         <h1 id="advent-of-code---year-2023-day-19"><a class="header" href="#advent-of-code---year-2023-day-19">Advent of code - Year 2023 Day 19</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2023/day/19">day 19</a>. Go back to year <a href="2023.html">2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="info"><a class="header" href="#info">Info</a></h3>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
 <p>The main key was to parse properly the given input. That is why the code today is pretty long.</p>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
 <p>After that we just use hash table to memorize given states. Than we process each request from left to right until it is satisfied.</p>
