--- a/aoc/2023-22.html
+++ b/aoc/2023-22.html
@@ -156,7 +156,7 @@
                     <main>
                         <h1 id="advent-of-code---year-2023-day-22"><a class="header" href="#advent-of-code---year-2023-day-22">Advent of code - Year 2023 Day 22</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2023/day/22">day 22</a>. Go back to year <a href="2023.html">2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="info"><a class="header" href="#info">Info</a></h3>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
 <p>In the first part we parse the input than sort the bricks by their <code>z</code> value. After that we simply squish the bricks together (or <code>compress</code> them) so they won't  levitate anymore. After that we compute how they are dependent on each other, or in other words how they <strong>support</strong> each other. Lastly we compute these that follows the rules and left out the others.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
