--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -156,8 +156,9 @@
                     <main>
                         <h1 id="advent-of-code---year-2024"><a class="header" href="#advent-of-code---year-2024">Advent of code - Year 2024</a></h1>
 <p>This contains tasks from the <a href="https://adventofcode.com/2024">year 2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="info"><a class="header" href="#info">Info</a></h3>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
 <p>In this years advent of code I will try to use <code>go</code> programming languange to solve all problems. Lets see how far I will get by doing so.</p>
+<p>Beside solving each problem I will be focusing on the readibility of the code.</p>
 <h3 id="days"><a class="header" href="#days">Days</a></h3>
 <ul>
 <li><a href="2024-1.html">Day 1</a></li>
