deploy: 6f30daa7e844c6140bcb7481fe96c58a20bd9b00

--- a/print.html
+++ b/print.html
@@ -919,7 +919,7 @@ Plus you may also play a small <a href="https://aoc-bingo.fly.dev/">Bingo</a> th
 <div style="break-before: page; page-break-before: always;"></div><h1 id="advent-of-code---year-2024"><a class="header" href="#advent-of-code---year-2024">Advent of code - Year 2024</a></h1>
 <p>This contains tasks from the <a href="https://adventofcode.com/2024">year 2024</a>. Go back to <a href="aoc/../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
-<p>In this years advent of code I will try to use <code>go</code> programming languange to solve all problems. Lets see how far I will get by doing so.</p>
+<p>In this years advent of code I will try to use <code>go</code> <a href="https://go.dev">programming languange</a> to solve all problems. Lets see how far I will get by doing so.</p>
 <p>Beside solving each problem I will be focusing on the readibility of the code.</p>
 <h3 id="days"><a class="header" href="#days">Days</a></h3>
 <ul>
