deploy: 766ece6262ac4eea485fa0d7ea3912a435d2a874

--- a/aoc/2024-1.html
+++ b/aoc/2024-1.html
@@ -208,7 +208,7 @@ func count(list *[]int) map[int]int {
 }
 
 func part1() {
-  var result int = 0
+  var result int
   read_file("INPUT")
   first_column, second_column := read_file("INPUT")
   for i, _ := range first_column {
@@ -219,7 +219,7 @@ func part1() {
 }
 
 func part2() {
-  var result int = 0
+  var result int
   first_column, second_column := read_file("INPUT")
   second_map := count(&amp;second_column)
   for _, key := range first_column {
