deploy: 7e9893d67a19cac92d0ed759695262dc59eeb67a

--- a/print.html
+++ b/print.html
@@ -968,8 +968,7 @@ func read_file(file_path string) ([]int, []int) {
 func count(list *[]int) map[int]int {
   my_map := make(map[int]int)
   for _, val := range *list {
-    i, ok := my_map[val]
-    if ok {
+    if i, ok := my_map[val]; ok {
       my_map[val] = i + 1
     } else {
       my_map[val] = 1
