deploy: e2c06a85632d711cce504ebb3b5497607e2f81d8

--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -162,6 +162,7 @@
 <h3 id="days"><a class="header" href="#days">Days</a></h3>
 <ul>
 <li><a href="2024-1.html">Day 1</a></li>
+<li><a href="2024-2.html">Day 2</a></li>
 </ul>
 
                     </main>
