--- a/aoc/2024-2.html
+++ b/aoc/2024-2.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 day 1 - Personal page</title>
+        <title>Year 2024 day 2 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,13 +154,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024-day-1"><a class="header" href="#advent-of-code---year-2024-day-1">Advent of code - Year 2024 Day 1</a></h1>
-<p>This is a solution of the <a href="https://adventofcode.com/2024/day/1">day 1</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-2"><a class="header" href="#advent-of-code---year-2024-day-2">Advent of code - Year 2024 Day 2</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/2">day 2</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
-<p>In the first part we only compute the absolute difference in a sorted lists.</p>
+<p>We will always create an array of arrays. Then we create a closure which will remember the last state. Then we always check whether it is inside bounds for the limit and also if it is increasing or decreasing. For those we wil have two closures. Later on it was rewritten into one closure.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
-<p>In the second part we create a map for the second column, where keys are the numers and value is the number of occurances. Then proceed in the first column and compute the value.</p>
+<p>For the second part I added toleration. That is we can skip one element <strong>inside</strong> the array. But we have to take care also about the case where <em>the first element</em> can be omitted, therefore I will call two closures. Hence it is not bruteforcing all possible missing indices, but I am considering only two cases.</p>
 <h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
 <pre><code class="language-go">package main
 
@@ -169,69 +169,104 @@ import (
   "log"
   "math"
   "os"
-  "regexp"
-  "sort"
   "strconv"
+  "strings"
 )
 
-func read_file(file_path string) ([]int, []int) {
+const LIMIT int = 3
+
+func read_file(file_path string) [][]int {
   content, err := os.ReadFile(file_path)
   if err != nil {
     log.Fatal(err)
   }
-  regex, _ := regexp.Compile("([0-9]+)\\s+([0-9]+)")
-  found := (regex.FindAllStringSubmatch(string(content), -1))
-  var first_column []int
-  var second_column []int
-  for _, f := range found {
-    nr1, _ := strconv.Atoi(f[1])
-    nr2, _ := strconv.Atoi(f[2])
-    first_column = append(first_column, nr1)
-    second_column = append(second_column, nr2)
-  }
-  sort.Ints(first_column)
-  sort.Ints(second_column)
-  return first_column, second_column
-}
-
-func count(list *[]int) map[int]int {
-  my_map := make(map[int]int)
-  for _, val := range *list {
-    if i, ok := my_map[val]; ok {
-      my_map[val] = i + 1
-    } else {
-      my_map[val] = 1
+  var res [][]int
+  splited := strings.Split(string(content), "\n")
+  for i, el := range splited {
+    level := strings.Split(el, " ")
+    if len(el) == 0 {
+      continue
+    }
+    res = append(res, make([]int, len(level)))
+    for j, val := range level {
+      res[i][j], _ = strconv.Atoi(val)
     }
   }
-  return my_map
+  return res
+}
+
+func comparing(tolerate bool, start int, compare func(int, int) bool) func(int) bool{
+  current := start
+  last := true
+  tol := tolerate
+  return func(x int) bool {
+    diff := int(math.Abs(float64(current - x)))
+    if tol &amp;&amp; (!compare(x, current) || diff &gt; LIMIT) {
+      tol = false
+    } else {
+      last = compare(x, current) &amp;&amp; last &amp;&amp; diff &lt;= LIMIT
+      current = x
+    }
+    return last
+  }
+}
+
+func increasing(tolerate bool, start int) func(int) bool {
+  greeater_than := func(x, y int) bool {
+    return x &gt; y
+  }
+  return comparing(tolerate, start - 1, greeater_than)
+}
+
+func decreasing(tolerate bool, start int) func(int) bool {
+  less_than := func(x, y int) bool {
+    return x &lt; y
+  }
+  return comparing(tolerate, start + 1, less_than)
 }
 
 func part1() {
   var result int
-  read_file("INPUT")
-  first_column, second_column := read_file("INPUT")
-  for i, _ := range first_column {
-    difference := math.Abs(float64(first_column[i] - second_column[i]))
-    result += int(difference)
+  levels := read_file("INPUT")
+  for _, level := range levels {
+    i := increasing(false, level[0])
+    d := decreasing(false, level[0])
+    incr, decr := true, true
+    for _, val := range level {
+      incr = incr &amp;&amp; i(val)
+      decr = decr &amp;&amp; d(val)
+    }
+    if incr || decr {
+      result += 1
+    }
   }
   fmt.Println("Part 1: ", result)
 }
 
 func part2() {
   var result int
-  first_column, second_column := read_file("INPUT")
-  second_map := count(&amp;second_column)
-  for _, key := range first_column {
-    i, ok := second_map[key]
-    if ok {
-      result = result + key*i
+  levels := read_file("INPUT")
+  for _, level := range levels {
+    i, i_without_first := increasing(true, level[0]), increasing(false, level[1])
+    d, d_without_first := decreasing(true, level[0]), decreasing(false, level[1])
+    incr, decr, incr_without_first, decr_without_first := true, true, true, true
+    for _, val := range level {
+      incr = incr &amp;&amp; i(val)
+      decr = decr &amp;&amp; d(val)
+    }
+    for _, val := range level[1:] {
+      incr_without_first = incr_without_first &amp;&amp; i_without_first(val)
+      decr_without_first = decr_without_first &amp;&amp; d_without_first(val)
+    }
+    if incr || decr || incr_without_first || decr_without_first {
+      result += 1
     }
   }
   fmt.Println("Part 2: ", result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 1 - Historian Hysteria")
+  fmt.Println("Year 2024 day 2 - Red-Nosed Reports")
   part1()
   part2()
 }
@@ -241,11 +276,11 @@ func main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-1.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-2.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -255,11 +290,11 @@ func main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-1.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-2.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
