deploy: 9426d428d5b951e8218df8cf333bfdfa53e890da

--- a/print.html
+++ b/print.html
@@ -921,6 +921,7 @@ Plus you may also play a small <a href="https://aoc-bingo.fly.dev/">Bingo</a> th
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
 <p>In this years advent of code I will try to use <code>go</code> <a href="https://go.dev">programming languange</a> to solve all problems. Lets see how far I will get by doing so.</p>
 <p>Beside solving each problem I will be focusing on the readibility of the code.</p>
+<p><img src="https://raw.githubusercontent.com/MariaLetta/free-gophers-pack/master/illustrations/png/2.png" alt="Gopher this is fine" /></p>
 <h3 id="days"><a class="header" href="#days">Days</a></h3>
 <ul>
 <li><a href="aoc/2024-1.html">Day 1</a></li>
