deploy: 823c3ca10b08ed3c6e84a9d4478b4ddaed06bc1f

--- a/aoc/2024-2.html
+++ b/aoc/2024-2.html
@@ -195,7 +195,7 @@ func read_file(file_path string) [][]int {
   return res
 }
 
-func comparing(tolerate bool, start int, compare func(int, int) bool) func(int) bool{
+func comparing(tolerate bool, start int, compare func(int, int) bool) func(int) bool {
   current := start
   last := true
   tol := tolerate
@@ -215,21 +215,21 @@ func increasing(tolerate bool, start int) func(int) bool {
   greeater_than := func(x, y int) bool {
     return x &gt; y
   }
-  return comparing(tolerate, start - 1, greeater_than)
+  return comparing(tolerate, start-1, greeater_than)
 }
 
 func decreasing(tolerate bool, start int) func(int) bool {
   less_than := func(x, y int) bool {
     return x &lt; y
   }
-  return comparing(tolerate, start + 1, less_than)
+  return comparing(tolerate, start+1, less_than)
 }
 
 func increasing_or_decreasing(tolerate bool, level *[]int) bool {
   i := increasing(tolerate, (*level)[0])
   d := decreasing(tolerate, (*level)[0])
   incr, decr := true, true
-  for _, val := range (*level) {
+  for _, val := range *level {
     incr = incr &amp;&amp; i(val)
     decr = decr &amp;&amp; d(val)
   }
@@ -274,7 +274,7 @@ func main() {
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2024-3.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -288,7 +288,7 @@ func main() {
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2024-3.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
