--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -164,6 +164,7 @@
 <ul>
 <li><a href="2024-1.html">Day 1</a></li>
 <li><a href="2024-2.html">Day 2</a></li>
+<li><a href="2024-3.html">Day 3</a></li>
 </ul>
 
                     </main>
