--- a/print.html
+++ b/print.html
@@ -947,6 +947,7 @@ import (
   "regexp"
   "sort"
   "strconv"
+  "time"
 )
 
 func read_file(file_path string) ([]int, []int) {
@@ -983,17 +984,19 @@ func count(list *[]int) map[int]int {
 
 func part1() {
   var result int
-  read_file("INPUT")
+  start := time.Now()
   first_column, second_column := read_file("INPUT")
   for i, _ := range first_column {
     difference := math.Abs(float64(first_column[i] - second_column[i]))
     result += int(difference)
   }
-  fmt.Println("Part 1: ", result)
+  end := time.Now()
+  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
 }
 
 func part2() {
   var result int
+  start := time.Now()
   first_column, second_column := read_file("INPUT")
   second_map := count(&amp;second_column)
   for _, key := range first_column {
@@ -1002,7 +1005,8 @@ func part2() {
       result = result + key*i
     }
   }
-  fmt.Println("Part 2: ", result)
+  end := time.Now()
+  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
 }
 
 func main() {
@@ -1028,6 +1032,7 @@ import (
   "os"
   "strconv"
   "strings"
+  "time"
 )
 
 const LIMIT int = 3
@@ -1095,17 +1100,20 @@ func increasing_or_decreasing(tolerate bool, level *[]int) bool {
 
 func part1() {
   var result int
+  start := time.Now()
   levels := read_file("INPUT")
   for _, level := range levels {
     if increasing_or_decreasing(false, &amp;level) {
       result += 1
     }
   }
-  fmt.Println("Part 1: ", result)
+  end := time.Now()
+  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
 }
 
 func part2() {
   var result int
+  start := time.Now()
   levels := read_file("INPUT")
   for _, level := range levels {
     level_without_first := level[1:]
@@ -1113,7 +1121,8 @@ func part2() {
       result += 1
     }
   }
-  fmt.Println("Part 2: ", result)
+  end := time.Now()
+  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
 }
 
 func main() {
@@ -1138,6 +1147,7 @@ import (
   "os"
   "regexp"
   "strconv"
+  "time"
 )
 
 func read_file(file_path string) string {
@@ -1151,6 +1161,7 @@ func read_file(file_path string) string {
 func part1() {
   var result int
   var content = read_file("INPUT")
+  start := time.Now()
   regex := regexp.MustCompile("mul\\(([0-9]{1,3}),([0-9]{1,3})\\)")
   found := regex.FindAllStringSubmatch(content, -1)
   for _, f := range found {
@@ -1158,12 +1169,14 @@ func part1() {
     nr2, _ := strconv.Atoi(f[2])
     result += nr1 * nr2
   }
-  fmt.Println("Part 1: ", result)
+  end := time.Now()
+  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
 }
 
 func part2() {
   var result int
   content := read_file("INPUT")
+  start := time.Now()
   regex := regexp.MustCompile("do\\(\\)|don't\\(\\)|mul\\(([0-9]{1,3}),([0-9]{1,3})\\)")
   found := regex.FindAllStringSubmatch(content, -1)
   enabled := true
@@ -1181,8 +1194,8 @@ func part2() {
       }
     }
   }
-
-  fmt.Println("Part 2: ", result)
+  end := time.Now()
+  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
 }
 
 func main() {
