deploy: 72d8b28866ad23945c7925974a03d7c329eb0c93

--- a/aoc/2024-5.html
+++ b/aoc/2024-5.html
@@ -286,7 +286,7 @@ func part1() {
     result += cor[len(cor)/2]
   }
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -298,7 +298,7 @@ func part2() {
     result += fix(rules, inc)[len(inc)/2]
   }
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
