--- a/aoc/2024-2.html
+++ b/aoc/2024-2.html
@@ -247,7 +247,7 @@ func part1() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -261,7 +261,7 @@ func part2() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
