--- a/aoc/2024-4.html
+++ b/aoc/2024-4.html
@@ -197,8 +197,8 @@ func tabelize(text *string) [][]string {
 func transpose(text *string) string {
   var builder strings.Builder
   table := tabelize(text)
-  for i, _ := range table[0] {
-    for j, _ := range table {
+  for i := range table[0] {
+    for j := range table {
       builder.WriteString(string(table[j][i]))
     }
     builder.WriteString("\n")
@@ -286,7 +286,7 @@ func part1() {
   text = replace(&amp;text)
   result = count_xmas(&amp;text)
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -296,7 +296,7 @@ func part2() {
   table := tabelize(&amp;content)
   result = count_x_mas(table)
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "):", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
