--- a/print.html
+++ b/print.html
@@ -987,12 +987,12 @@ func part1() {
   var result int
   start := time.Now()
   first_column, second_column := read_file("INPUT")
-  for i, _ := range first_column {
+  for i := range first_column {
     difference := math.Abs(float64(first_column[i] - second_column[i]))
     result += int(difference)
   }
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -1007,7 +1007,7 @@ func part2() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
@@ -1109,7 +1109,7 @@ func part1() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -1123,7 +1123,7 @@ func part2() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
@@ -1171,7 +1171,7 @@ func part1() {
     result += nr1 * nr2
   }
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -1196,7 +1196,7 @@ func part2() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
@@ -1248,8 +1248,8 @@ func tabelize(text *string) [][]string {
 func transpose(text *string) string {
   var builder strings.Builder
   table := tabelize(text)
-  for i, _ := range table[0] {
-    for j, _ := range table {
+  for i := range table[0] {
+    for j := range table {
       builder.WriteString(string(table[j][i]))
     }
     builder.WriteString("\n")
@@ -1337,7 +1337,7 @@ func part1() {
   text = replace(&amp;text)
   result = count_xmas(&amp;text)
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -1347,7 +1347,7 @@ func part2() {
   table := tabelize(&amp;content)
   result = count_x_mas(table)
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "):", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
@@ -1488,7 +1488,7 @@ func part1() {
     result += cor[len(cor)/2]
   }
   end := time.Now()
-  fmt.Println("Part 1 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
 func part2() {
@@ -1500,7 +1500,7 @@ func part2() {
     result += fix(rules, inc)[len(inc)/2]
   }
   end := time.Now()
-  fmt.Println("Part 2 (", end.Sub(start), "): ", result)
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
 
 func main() {
