deploy: 6b075eee39413b3c7225c09252bc746dc38b2949

--- a/library.html
+++ b/library.html
@@ -160,7 +160,8 @@
 <tr><td>Nanos</td><td>Timo Leibig</td><td>978-80-7585-527-5</td></tr>
 <tr><td>Práskač</td><td>Jan-Erik Fjell</td><td>978-80-7390-790-7</td></tr>
 <tr><td>Pokoj stínů</td><td>Jan-Erik Fjell</td><td>978-80-7585-175-8</td></tr>
-<tr><td>Mstitel</td><td>Jan-Erik Fjell</td><td>978-80-7642-773-0</td></tr>
+<tr><td>Mstitel</td><td>Jan-Erik Fjell</td><td>978-80-7585-190-1</td></tr>
+<tr><td>Predátor</td><td>Jan-Erik Fjell</td><td>978-80-7585-191-8</td></tr>
 </tbody></table>
 </div>
                     </main>
