deploy: 7219583014679f3e6351d8710f0d0e77fd685ac8

--- a/boot.html
+++ b/boot.html
@@ -212,7 +212,7 @@ scalainstall
 
 cargo install juliaup
 cargo install mdbook
-cargo install rust-analyzer
+rustup install rust-analyzer
 </code></pre>
 
                     </main>
