--- a/print.html
+++ b/print.html
@@ -763,7 +763,7 @@ scalainstall
 
 cargo install juliaup
 cargo install mdbook
-cargo install rust-analyzer
+rustup install rust-analyzer
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="boj-proti-dezinformacím"><a class="header" href="#boj-proti-dezinformacím">Boj proti dezinformacím</a></h1>
 <p>Tady je můj menší seznam stránek a zdrojů, které slouží proti šíření dezinformací.</p>
