deploy: 7f023431da08a938f4dd4a272148ad29057553f9

--- a/aoc/2024-7.html
+++ b/aoc/2024-7.html
@@ -201,12 +201,12 @@ func read_file(file_path string) []Equation {
   return equations
 }
 
-func concat(x int, y int) int {
+func concat(x, y int) int {
   res, _ := strconv.Atoi(strconv.Itoa(x) + strconv.Itoa(y))
   return res
 }
 
-func solve(eq Equation, acc int, i int) bool{
+func solve(eq Equation, acc, i int) bool{
   if i &lt; len(eq.operands) &amp;&amp; acc &gt; eq.result {
     return false
   }
@@ -216,7 +216,7 @@ func solve(eq Equation, acc int, i int) bool{
   return solve(eq, acc + eq.operands[i], i+1) || solve(eq, acc * eq.operands[i], i+1)
 }
 
-func solve_concat(eq Equation, acc int, i int) bool {
+func solve_concat(eq Equation, acc, i int) bool {
   if i &lt; len(eq.operands) &amp;&amp; acc &gt; eq.result {
     return false
   }
